fixed ordering issue: left menu is now behind auto-complete tooltip

--- a/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/skins/denkbares/skin.css
+++ b/KnowWE/KnowWE-Resources/src/main/webapp/templates/knowweTmps/skins/denkbares/skin.css
@@ -1155,6 +1155,9 @@ a.toc {
 a.toc:hover {
 	background:#eee;
 }
+#favorites {
+	z-index:-10;
+}
 #favorites .toc {
 	width:100%;
 }
